# market-fit-research

./: .gitignore  CLAUDE.md  CONTEXT.md  DIGEST.md  README.md  SOCIAL_DRAFTS.md  pyproject.toml  tickets.md
.github/workflows/: daily-ingestion.yml  ingestion.yml  recluster.yml  social-draft.yml  weekly-digest.yml  weekly-ingestion.yml
data/: pipeline.sqlite3
docs/: deployment.md
docs/adr/: 0001-discovery-tool-not-autonomous-builder.md  0002-github-actions-hosting-with-issues-as-review-ui.md  0003-llm-and-search-provider-agnostic.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/specs/: 0001-v1-pipeline.md
src/pain_point_pipeline/: cli.py  db.py  digest.py  markdown_files.py  models.py  orchestrator.py  phrasing.py  ports.py  repository.py  social.py  video.py
src/pain_point_pipeline/adapters/: _structured_llm.py  arctic_shift.py  claude.py  deepseek.py  devforum.py  github_tracker.py  hyperframes_video.py  make_webhook.py  reddit.py  reddit_rapidapi.py
tests/: conftest.py  fakes.py  test_arctic_shift_adapter_integration.py  test_claude_adapter_integration.py  test_claude_adapter_unit.py  test_cli.py  test_deepseek_adapter_integration.py  test_deepseek_adapter_unit.py  test_devforum_adapter_integration.py  test_digest.py  test_github_tracker_integration.py  test_orchestrator.py  test_reddit_adapter_integration.py  test_reddit_rapidapi_adapter_integration.py  test_social.py  test_structured_llm_unit.py  test_video.py
video/: index.html  package-lock.json  package.json
video/data/: script.fixture.json
